Generics_Extend_WildCard/Code8_error_report.txt
javac errors for Code8.java 
Code8.java:26: error: no suitable method found for add(Number)
        list.add(number);
            ^
    method Collection.add(CAP#1) is not applicable
      (argument mismatch; Number cannot be converted to CAP#1)
    method List.add(CAP#1) is not applicable
      (argument mismatch; Number cannot be converted to CAP#1)
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Number from capture of ? extends Number
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
 
========================= 
ExtendJ errors for Code8.java 
 
========================= 
Eclipse ECJ errors for Code8.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\CodeRepo\Generics_Extend_WildCard\Code8.java (at line 26)
	list.add(number);
	     ^^^
The method add(capture#4-of ? extends Number) in the type List<capture#4-of ? extends Number> is not applicable for the arguments (Number)
----------
1 problem (1 error)
